Fixed minor alignment bugs

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,8 @@ body{
     
 }
 h1{
+    width: 50.5vw;
+    height: 15vw;
     font-size: 5vw;
     line-height: 5vw;
     color: #1e1c24;
@@ -61,7 +63,7 @@ h2{
     line-height: 3vw;
     color: #1e1c24;
     font-family: "Muli";
-    font-weight: 300;
+    font-weight: 700;
     text-align: left;
     opacity: 0.4;
 
@@ -178,8 +180,8 @@ h2{
     width:30vw;
     height: auto;
     position: absolute;
-    left:2vw;
-    bottom:15vw;
+    left:0;
+    bottom:10vw;
     z-index:1;
     display:none;
  
