--- a/styles/tablets.css
+++ b/styles/tablets.css
@@ -85,12 +85,10 @@
     .item81{
         position: relative;
     }
-   .h2-f{
+   .h2-f1{
        position: absolute;
        top:5vw;
        left:10vw;
-
-
    }
     
     
